					  And revive with 1 HP / 1 SP at the place of your death.
				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/12/02
	* Rev. 14555 Corrected incorrect bonuses relating to bAddMonsterDropItem/Group. (burgerport:4569) [L0ne_W0lf]
	* Updated the IG_Ore, IG_Food, IG_Recovery and IG_Jewel item groups to official items/rates.
	- As a result bAddMonsterDropItemGroup now uses the highest rate in group as it's base rate.
2010/12/02
	* Rev. 14552 Updated some more cash shop boxes to use rentitem instead of getitem. [L0ne_W0lf]
	* Added mercenary skills for Mimic, Disguise, Alice, Doppelganger, and Egnigem.
	* Rev. 14549 Updated the item types for several of the cash item boxes to 18. [L0ne_W0lf]
	* Fixed the Exorcism_Bible bonus, missing {}'s for who knows how long. (bugreport:4342)
	* Updated Brasilis monsters stats again, care of Playtester.
2010/11/30
	* Rev. 14529 Fixed a mistake (excess dummy name) in dead branch list fallback value (since r32). [Ai4rei]
	* Rev. 14524 Updated comments for skill Berserk in skill_tree.txt, among others because they would cause errors the way they are read now. [Ai4rei]
2010/11/26
	* Rev. 14507 Added killerrid and killedrid param constants to const.txt [ultramage]
2010/11/21
	* Rev. 14480 Added enumeration RC2_* to const.txt for mob data 'race2' (bugreport:4561). [Ai4rei]
	- Fixed bSubRace2 being documented as bSPSubRace2 (since r1257).
2010/11/19
	* Rev. 14474 Item Database bugfixing. [L0ne_W0lf]
	- Fixed equip locations and view IDs for some headgears. (bugreport:4336)
	- Corrected the value of hit given by Military Ration C. (bugreport:4369)
	- Updated bonus for items that increase attack by class. (bugreport:4387)